# KimiNoteBook

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
.xflow/: issue-draft.md
.xflow/issue-1/: implementation_plan.md  pr-draft.md  task.md  walkthrough.md
.xflow/issue-3/: implementation_plan.md  issue-body.md  pr-draft.md  task.md  walkthrough.md
.xflow/issue-7/: implementation_plan.md  task.md  walkthrough.md
server/: pyproject.toml
server/app/: config.py  main.py
server/app/models/: __init__.py  session.py
server/app/routers/: sessions.py
server/app/services/: __init__.py  session_parser.py
server/tests/: test_api.py  test_session_parser.py
server/tests/fixtures/legacy/: state.json  wire.jsonl
server/tests/fixtures/new/: state.json
server/tests/fixtures/new/agents/main/: wire.jsonl
server/tests/fixtures/old/: state.json
server/tests/fixtures/old/agents/main/: wire.jsonl
web/: index.html  package-lock.json  package.json  vitest.config.ts
web/src/: App.vue  main.ts  style.css
web/src/api/: sessions.ts
web/src/components/: ExportDialog.vue  MessageItem.vue  RenderToggle.vue  SessionCard.vue
web/src/components/__tests__/: MessageItem.spec.ts  SessionCard.spec.ts
web/src/router/: index.ts
web/src/stores/: sessions.ts
web/src/types/: index.ts
web/src/utils/: markdown.ts
web/src/views/: SessionDetailView.vue  SessionListView.vue
